Copy actual encoding; simplify file uri usage
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@747397 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: ba322d10e7b6220659fd0f2566edc681298c4097